--- a/_posts/2021-05-21-doge.md
+++ b/_posts/2021-05-21-doge.md
@@ -16,9 +16,11 @@ tags:
 
 - 某个年纪青青的成功人士开创的公司要上市了，这个年轻人和马云合影过，和大明星合影过，站在人民大会堂的一个位置拍一张庆祝上市的照片。现在出售原始股，每股3元。
 
-没几周就会出现一个新项目（骗局），与时俱进，符合国家大形势。几年前是加密货币，然后是人工智能和大数据，现在是脱贫攻坚。但是骗局蹭的热点又不能跟的太紧，太紧了老人听不懂，解释要费劲。
+- 等等
 
-有一次她在报名时我惊讶的发现她微信里一个超大的 excel，加载特别慢，加载成功后里面存了20万人的报名信息，身份证，姓名，电话一应俱全。如果每个人收3块钱的报名费，这次骗局就纯赚60万。这20万人可以被重复收割。
+骗局与时俱进，符合国家大形势。几年前是加密货币，然后是人工智能和大数据，现在是脱贫攻坚。骗局追热点，但又不能跟的太紧，太紧了老人听不懂，解释要费劲。
+
+有一次她在报名时我惊讶的发现她微信里一个超大的 excel，加载特别慢，加载成功后里面存了20万人的报名信息，身份证，姓名，电话一应俱全。如果每个人收3块钱的报名费，这次骗局就纯赚60万，而且这20万人可以被重复收割。
 
 我们花了很多时间去劝她。
 
