--- a/_posts/2021-05-21-doge.md
+++ b/_posts/2021-05-21-doge.md
@@ -34,22 +34,21 @@ tags:
 
 但是毫无用处。
 
-我们觉得这些骗局真蠢啊，怎么会有人信？老人真傻！是不是人老了就容易糊涂，就会变傻？
+你们觉得这些骗局真蠢啊，怎么会有人信？老人真傻！是不是人老了就容易糊涂，就会变傻？
 
-我们笑话着这些愚蠢的骗局，笑话老年人，好像自己不是韭菜一样。
+你们自诩聪明的极客，笑话着这些愚蠢的骗局，笑话老年人，好像自己不是韭菜一样。
 
-**我为什么人们会买狗狗币呢？为什么只买几百块钱呢？**
+**你们为什么会会买狗狗币呢？为什么只买几百块钱呢？**
 
-因为我们也只是赌一把，搏一搏，单车变摩托。几百块钱输的起，但是又不想错过一个亿。
+因为你们也只是赌一把，搏一搏，单车变摩托。几百块钱输的起，但是又不想错过一个亿。
 
-**在马斯克眼里，我们不也是韭菜吗？**
+**在马斯克眼里，你们不也是韭菜吗？**
 
 有一个人持有27%的狗狗币的仓位，除了他会是谁呢。
 
 彩票，比特币，狗狗币，给那些奋斗无望的人一丝幻想，通过一夜暴富来证明今生不是loser。真是可怜和凄凉。
 
 社会等级森严，清醒的穷人奋斗无望，做梦的穷人被人吸血。
-
 
 > 传道书4:6 满了一把得享安静，强如满了两把劳碌捕风。
 >
