--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -305,7 +305,11 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-05-17-Ryan.jpeg)
 
+**week21**
 
+这周日下午和小组一起打了2个小时羽毛球，居然偶尔还能打赢向文，好开心。我打算给我儿子买个羽毛球拍，一起打。这是本周最开心的事情了。
+
+![](https://mednoter.com/media/files/2021/2021-05-24-Ryan.jpeg)
 
 # 历年新年计划的存档
 
