--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -311,6 +311,22 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-05-24-Ryan.jpeg)
 
+**week22**
+
+[健康] 因为第21周打了羽毛球，这一周膝盖都好疼啊。没法跑步，没法锻炼。
+
+[安息] 每当我强迫周日“浪费时间”，杜绝学习的念头时，就能让自己的步伐慢下来。心开始认真倾听孩子的话，陪他一起“浪费时间”，晚上给他洗澡，陪他玩耍。也可以可以读一些“闲书”。
+
+如果心里但凡有一点 “这周抽空学点新东西” 的想法，这种想法就让我急躁，对孩子不耐烦。
+
+周六周日就应该分别出来，安息日。
+
+正如 Timothy Keller 说的，听神的话并不保证万事亨通。当周末吧把内心的工作的渴望的按钮关闭时，获得了安息。这可能会让你职场受挫。
+
+![](https://mednoter.com/media/files/2021/2021-05-31-Ryan.jpeg)
+
+
+
 # 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
