--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -326,6 +326,20 @@ Watch Client Video every week, attend meeting with customer
 ![](https://mednoter.com/media/files/2021/2021-05-31-Ryan.jpeg)
 
 
+**week24**
+
+[健康]去医院体检，医生说前列腺增大且有钙化灶。这周拼命加班应该让前列腺苦不堪言吧。这给自己提了个醒，以后不能久坐。但是单纯用脑子记着“不要久坐”也不可执行。如果说“上午/下午各站一个小时”还要费脑力去记，也是不胜其烦。
+
+不如就改成这样，好执行一些。
+
+- 但凡沟通，就站着。反正写邮件，回微信，回Slack，打电话，开会，又不需要费脑子。能站则站。
+- 但凡读书，就站着，用高高的书架放书。这样颈椎和前列腺都开心。
+- 但凡用手机，就站着。睡觉前也不例外，绝不能窝在床上看手机。
+
+[家庭] 这周我加了一周的班，整个家庭氛围都烦躁。周日下午全家人一起去游泳，晚上一起吃火锅。孩子很开心，老婆也很开心。
+
+![](https://mednoter.com/media/files/2021/2021-06-14-Solomon.jpeg)
+
 
 # 历年新年计划的存档
 
