--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -338,6 +338,8 @@ Watch Client Video every week, attend meeting with customer
 
 [家庭] 这周我加了一周的班，整个家庭氛围都烦躁。周日下午全家人一起去游泳，晚上一起吃火锅。孩子很开心，老婆也很开心。
 
+[锻炼] 这周学了一个小窍门。很多人锻炼后，都会因为身体疼痛睡不好。解决办法：除了拉伸身体，还可以吃一粒(或半粒) 布洛芬。
+
 ![](https://mednoter.com/media/files/2021/2021-06-14-Solomon.jpeg)
 
 
