--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -40,6 +40,9 @@ tags:
 - 控制油脂摄入量，中午吃无油/少油的食物。顺便还能不犯困。
 
 
+去医院体检，医生说前列腺增大且有钙化灶。吃了两周抗生素，好一些了。随着年龄的增长，身体会越来越差，不要透支身体。以后每天要坚持一段时间的站立办公。
+
+
 # 家庭
 
 ## 1. 夫妻关系
@@ -340,7 +343,24 @@ Watch Client Video every week, attend meeting with customer
 
 [锻炼] 这周学了一个小窍门。很多人锻炼后，都会因为身体疼痛睡不好。解决办法：除了拉伸身体，还可以吃一粒(或半粒) 布洛芬。
 
-![](https://mednoter.com/media/files/2021/2021-06-14-Solomon.jpeg)
+![](https://mednoter.com/media/files/2021/2021-06-14-Ryan.jpeg)
+
+**week25**
+
+琳琳姑姑抑郁症犯了，爸爸忙的焦头烂额，这一周我心也非常的疲惫，抱怨神给我们家这么重的担子，什么倒霉事都临到我爸爸头上。
+
+
+**week26**
+
+本周看了一篇非常好的文章《如果变老了，我还能干程序员吗？》，非常有启发。要好好的规划一下自己的职业生涯。
+
+本周去盲人按摩时，师傅给推拿了膝盖，明显缓解了膝盖的疼痛。以后要坚持去按摩，且要找男师傅，避免被情欲试探。
+
+![](https://mednoter.com/media/files/2021/2021-06-28-Ryan.jpeg)
+
+**week27**
+
+本周开始读《加尔文基督教要义》，三部大头书。
 
 
 # 历年新年计划的存档
