--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -360,7 +360,15 @@ Watch Client Video every week, attend meeting with customer
 
 **week27**
 
-本周开始读《加尔文基督教要义》，三部大头书。
+[信仰] 本周开始读《加尔文基督教要义》，三部大头书。
+[健康] 我的斜方肌硬的像个铁快，吹空调可能是个诱发因素，从今天开始，尝试不吹空调，该出汗就出汗，该热就热
+[健康] 这周发现了一个不错的盲人推拿，148一个小时。
+[工作] 用 Terraform 快速 setup sandbox 的开发环境。
+
+
+**week28**
+
+![](https://mednoter.com/media/files/2021/2021-07-05-Ryan.jpeg)
 
 
 # 历年新年计划的存档
