--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -365,10 +365,15 @@ Watch Client Video every week, attend meeting with customer
 [健康] 这周发现了一个不错的盲人推拿，148一个小时。
 [工作] 用 Terraform 快速 setup sandbox 的开发环境。
 
+![](https://mednoter.com/media/files/2021/2021-07-05-Ryan.jpeg)
+
 
 **week28**
 
-![](https://mednoter.com/media/files/2021/2021-07-05-Ryan.jpeg)
+- [工作] Terraform: Complete paylocity production infra
+- [健康] 周六周日休息了2天，颈椎病已经好多了，千万不要再作践自己了。规律跑步，健身，锻炼身体。本周工作太拼命，导致颈椎病发作了。公司又不是你开的，何必如何废寝忘食？即使将来有一天你开公司，何必这么废寝忘食？工作常有，而健康不常有。
+
+![](https://mednoter.com/media/files/2021/2021-07-12-Ryan.jpeg)
 
 
 # 历年新年计划的存档
