--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -375,6 +375,25 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-07-12-Ryan.jpeg)
 
+**week29**
+
+忘记复盘，浑浑噩噩的过日子。
+
+**week30**
+
+忘记复盘，我的生活开始进入浑浑噩噩的日子，真的是不进则退，没有停滞这个说法。
+
+比如：周五/周六/周日，我和刘小坤磨叽到 11:30 才睡觉。已经开始破坏生物钟了。
+
+**week32**
+
+[读经祷告] 沐沐换了暑托班，8:30-9:15 我在送他去学校，打乱了灵修的作息。以后要早睡早起，早晨 6:00 起来灵修了。若可以，叫着刘小坤一起灵修。
+
+过去一周又变的非常浮躁，被物质的舒适，房子，财务等问题所吸引，没有办法专注在哲学和神学上。你不是爱智慧胜过物质吗，怎么又回头看索多玛的繁华呢？
+
+[家庭] 在我的薪酬可以非常富足的养家时，我的妻子抱怨我对家庭的时间投入太少。现在现金流开始萎缩，她开始意识到我努力赚钱养家也很重要了。钱多事少离家近，哪有这么好的事。
+
+
 
 # 历年新年计划的存档
 
