weekly review of Ryan

--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -393,6 +393,24 @@ Watch Client Video every week, attend meeting with customer
 
 [家庭] 在我的薪酬可以非常富足的养家时，我的妻子抱怨我对家庭的时间投入太少。现在现金流开始萎缩，她开始意识到我努力赚钱养家也很重要了。钱多事少离家近，哪有这么好的事。
 
+**week33**
+
+[health] 因为工要 10:30 PM和美国开会，我的作息乱的一塌糊涂，身体崩盘，颈椎病复发，而且也感冒了。
+[learn] 睡眠变差后，语言功能下降的也厉害，和别人说话时，跟不上别人的节奏，英语突然也听不懂了。
+[learn] 开始学习 Javascript
+[哲学] 读完了大半本苏菲的世界，错误很少，真实本好书。我记得高中读过一遍，读的毛骨悚然，现在依然是有点。
+[信仰] 因为生活各方面支出在增加，攒不下钱了。有点让我烦躁。再加上又要搬家，我脑子里都惦记着“如何多赚点钱？” 心静不下来。
+
+下周的Action：
+
+- 不要继续透支自己的身体。
+- 与神同行，是一次未知的探险，虽然生活起起伏伏，但是神必定会供养我。不要被钱和权利所诱惑。静下心来在哲学，信仰，还有 Computer Sciense 上。
+
+![](https://mednoter.com/media/files/2021/2021-08-16-Ryan.jpeg)
+
+
+
+
 
 
 # 历年新年计划的存档
