--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -395,23 +395,43 @@ Watch Client Video every week, attend meeting with customer
 
 **week33**
 
-[health] 因为工要 10:30 PM和美国开会，我的作息乱的一塌糊涂，身体崩盘，颈椎病复发，而且也感冒了。
+[health] 因为近两周 10:30 PM和美国开会，我的作息乱的一塌糊涂，身体崩盘，颈椎病复发，而且也感冒了。
 [learn] 睡眠变差后，语言功能下降的也厉害，和别人说话时，跟不上别人的节奏，英语突然也听不懂了。
 [learn] 开始学习 Javascript
 [哲学] 读完了大半本苏菲的世界，错误很少，真实本好书。我记得高中读过一遍，读的毛骨悚然，现在依然是有点。
 [信仰] 因为生活各方面支出在增加，攒不下钱了。有点让我烦躁。再加上又要搬家，我脑子里都惦记着“如何多赚点钱？” 心静不下来。
+[family] 这周和父亲吵架了，原因是他经常贬低我的工作为“打工仔”，贬低我的收入没有别人高。我知道他心里不是这么想的，就是嘴贱，让我难受。事后我很后悔，我为什么选择生气呢？你爱怎么说就怎么说吧，“nothing to prove”，我又不是为你而活，我的价值也不需要你承认。但是后来他居然打电话向我道歉了，我很惊讶，这是他人生第一次在语言上向我道歉吧。
+[family] 关于刘小坤囤东西，导致大量东西过保质期，周五小组大家讨论，刘小坤一落泪，大家顿时有开始和我辩论，替刘小坤说话。在道理上，他们说的其实都是错的，根本站不住脚，但是就是嘴硬，我花了好多的劲和他们辩论。周日读彼得前书，解决之道是乃是体贴她的软弱，并不是“证明她错了”。
+
+- 强烈的购买欲，囤东西，大量过期，本身就是错的，这是无可争辩的。
+- 你们作丈夫的，要按情理跟妻子共同生活，体贴女性是比较软弱的器皿；要尊重她，因为她也与你一同承受生命之恩。彼得前书‬ 3:7
+
+是的，解决之道乃是体贴她的软弱。
 
 下周的Action：
 
 - 不要继续透支自己的身体。
-- 与神同行，是一次未知的探险，虽然生活起起伏伏，但是神必定会供养我。不要被钱和权利所诱惑。静下心来在哲学，信仰，还有 Computer Sciense 上。
+- 与神同行是一次未知的探险，虽然生活起起伏伏，但是神必定会供养我。不要被钱和权利所诱惑。静下心来在哲学，信仰，还有 Computer Sciense 上。
 
 ![](https://mednoter.com/media/files/2021/2021-08-16-Ryan.jpeg)
 
+**week35**
 
+总结：失去了才会珍惜
 
+[health] 我当初立了一个志向，每工作1小时，休息10分钟，做做颈椎操，腰椎操。最近因为和稀泥，颈椎又崩了。以后绝不能掺水，要认真锻炼。
 
+[health] 站立办公的次数越来越少了。一方面是因为站立办公真的很累，有时候脑力无法集中。但是沟通时间，基本上不需要专注，老老实实站着就可以了。
 
+[health] 这周和刘小坤周日在吃日料时，我就喝了一小口清酒，嗓子和胃就不舒服了。以后还是不要喝酒了。一丁点都不要和。
+
+[哲学] 苏菲的世界我已经快看完了，高中的时候，看的我毛骨悚然，没想到时隔20年，又翻开了这本书。
+
+[神学] 在《苏菲的世界》中，艾伯特对苏菲说，”苏菲，我们要抓紧思考逃离计划了。如果你的世界都是虚构的，又何必在乎期末考试的成绩单呢？“。这让我对房子/舒适的生活有了”能过且过“的态度，如果这世界最后一切都会被翻过去，又何必在意这短暂一生中转瞬即逝的东西呢。
+
+[工作] 同时在 Architecture, Paylocity, UKG 之间切换，我有点烦躁。因为要管理越来越多的人了。
+
+![](https://mednoter.com/media/files/2021/2021-08-30-Ryan.jpeg)
 
 # 历年新年计划的存档
 
