--- a/_posts/2021-09-04-cave.md
+++ b/_posts/2021-09-04-cave.md
@@ -55,6 +55,7 @@ tags:
 
 1. 如果你在尝试用理性证明上帝的存在，可以读休谟和康德的书。休谟彻底拆毁了理性，康德则给理性塑造了边界。休谟和康德可以帮到你认识理性的局限性。
 2. 如果受过统计学训练，难以相信神迹。可以仔细研究科学主义的疆界（适用范围）。
+3. 如果你深信这个世界是真实的，笛卡尔的书让你觉得不再真实。
 
 
 
