--- a/_posts/2021-09-04-cave.md
+++ b/_posts/2021-09-04-cave.md
@@ -55,7 +55,7 @@ tags:
 
 1. 如果你在尝试用理性证明上帝的存在，你为什么坚信理性可以认识一切？可以读休谟和康德的书。
 2. 如果受过统计学训练，觉得神迹不可靠，期刊发表的论文更可靠，那你为什么会觉得“有些事更可靠”？可以仔细研究科学主义的适用范围。
-3. 如果你深信这个世界是真实的，笛卡尔的书让你觉得不再真实。
+3. 如果你深信这个世界是真实的，是什么让你感受到真实？笛卡尔的书让你觉得不再真实。
 
 
 
