--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -433,6 +433,18 @@ Watch Client Video every week, attend meeting with customer
 
 ![](https://mednoter.com/media/files/2021/2021-08-30-Ryan.jpeg)
 
+**week37**
+
+[learning] 学习了 webpack，知道它是干什么的了。加油，前端一点点开始搞起来！争取前端达到初级水平。
+[work] delegate 自己的一些在 onboarding 的职责给别人，这样不至于自己忙的焦头烂额且情绪崩溃。
+[family] 刘小坤开始跟着我查圣经了，这真是一个天大的事情，宝贵的远超一切。
+
+
+**week38**
+
+
+
+
 # 历年新年计划的存档
 
 - [My new year's resolutions for 2020](/plan-for-2020.html)
