recap last week

--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -440,10 +440,16 @@ Watch Client Video every week, attend meeting with customer
 [family] 刘小坤开始跟着我查圣经了，这真是一个天大的事情，宝贵的远超一切。
 
 
-**week38**
+**week39**
 
+这周事情非常多，非常累，不过事情越来越走向了正轨。
 
+1. 房子到期了，要找新的住的地方。差不多一半的休息时间都在干这个。一开始以为光大会展中心房子会最方便，靠近八院，靠近泳池，结果发现这种商用公寓既包含住宅，又包括公司，特别的脏乱差，采光也不好。
+2. 其次学习税务相关的知识，税收筹划，解决了一个困扰了我两年的良心问题。我注册了一个个人工作室，通过个人工作室交税，每个月就几百块钱，差不多全部合规了。
+3. 港股跌了 10%，我花了一些时间调整投资策略。现在想想，感觉不值，为了几万块钱，频繁的调整投资策略，既费时间，又费精力。切记切记，以后每年调整一次投资策略就行了。我让刘小坤狠狠的揍了我2板子，因为我违背了自己当初的交易纪律：只在发工资的时候看股票。
+4. 有两天睡的太晚，作息乱掉，刘小坤和我都非常疲惫。
 
+![](https://mednoter.com/media/files/2021/2021-09-27-Ryan.jpeg)
 
 # 历年新年计划的存档
 
