--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -35,7 +35,7 @@ tags:
 
 - 争取跑一次半马
 - 体重降低到 124 斤（现在是136斤）
-- 体脂降低到 20% (现在是 ___）
+- 体脂降低到 15% (现在是 ___）
 - 每周两次有氧训练，平时则按照 Nike Training Club 的计划进行训练
 - 控制油脂摄入量，中午吃无油/少油的食物。顺便还能不犯困。
 
@@ -450,6 +450,17 @@ Watch Client Video every week, attend meeting with customer
 4. 有两天睡的太晚，作息乱掉，刘小坤和我都非常疲惫。
 
 ![](https://mednoter.com/media/files/2021/2021-09-27-Ryan.jpeg)
+
+
+**week43**
+
+过去因为实在是太忙了，忙的焦头烂额，没有时间复盘。好在，10月中旬，我把这两件大事都弄完了。
+
+1. 解决了税务合规的问题。我注册了一个个人独资公司，申请了核定征收，这样每个月工资报税就完全通过这个个人独资公司报税，个税可以控制在200-400之间，以后再也不用因为税务的问题感到良心的亏欠了。日后也要写篇文章，分享给所有的远程工作者。
+2. 一开始房东不打算继续租给我们了。我前前后后找了一个月的房子，但是都太贵了，上海的租赁市场已经非理性了，100平的房子都要12k/月以上。我同意房东把房租涨了 1/4，从8800 升到了 11000，不折腾了，等孩子上了小薛后再搬家吧。
+
+![](https://mednoter.com/media/files/2021/2021-10-25-Ryan.jpeg)
+
 
 # 历年新年计划的存档
 
