--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -454,12 +454,14 @@ Watch Client Video every week, attend meeting with customer
 
 **week43**
 
-过去因为实在是太忙了，忙的焦头烂额，没有时间复盘。好在，10月中旬，我把这两件大事都弄完了。
+过去因为实在是太忙了，忙的焦头烂额，没有时间复盘。好在10月中旬这两件大事都弄完了。
 
-1. 解决了税务合规的问题。我注册了一个个人独资公司，申请了核定征收，这样每个月工资报税就完全通过这个个人独资公司报税，个税可以控制在200-400之间，以后再也不用因为税务的问题感到良心的亏欠了。日后也要写篇文章，分享给所有的远程工作者。
-2. 一开始房东不打算继续租给我们了。我前前后后找了一个月的房子，但是都太贵了，上海的租赁市场已经非理性了，100平的房子都要12k/月以上。我同意房东把房租涨了 1/4，从8800 升到了 11000，不折腾了，等孩子上了小薛后再搬家吧。
+1. 解决了税务合规的问题。我注册了一个个人独资公司，申请了核定征收，这样每个月工资报税就完全通过这个个人独资公司报税，个税可以控制在200-400之间，以后再也不用因为税务的问题感到良心的亏欠了。日后写篇税务筹划的文章，分享给所有的远程工作者。
+2. 一开始房东不打算继续租给我们了。我前前后后找了一个月的房子，但是都太贵了，上海的租赁市场已经非理性了，100平的房子都要12k/月以上。我同意房东把房租涨了 1/4，从 8800 RMB 升到了 11000 RMB，不折腾了，等孩子上了小学后再搬家吧。
 
 ![](https://mednoter.com/media/files/2021/2021-10-25-Ryan.jpg)
+
+下周生活估计会安定一些。
 
 
 # 历年新年计划的存档
