--- a/_posts/2020-12-01-2021-plan-for-Ryan.md
+++ b/_posts/2020-12-01-2021-plan-for-Ryan.md
@@ -9,15 +9,16 @@ tags:
 ---
 
 
-第一，享受平凡的快乐
+第一，享受平凡的快乐 <font color="red"> 60% </font>
 
 传道书：我所见为善为美的，就是人在神赐他一生的日子吃喝，享受日光之下劳碌得来的好处，因为这是他的份。神赐人资财丰富，使他能以吃用，能取自己的份，在他劳碌中喜乐，这乃是神的恩赐。 他不多思念自己一生的年日，因为神应他的心使他喜乐。
 
-第二，追求真理和智慧。
+第二，追求真理和智慧。<font color="red"> 60% </font>
+
 
 学习神学和哲学。
 
-第三，工作上的侧重。把焦点放到架构，业务上，不要在具体某一种编程语言上花费过多的时间，也不要在一些细节上雕花。
+第三，工作上的侧重。把焦点放到架构，业务上，不要在具体某一种编程语言上花费过多的时间，也不要在一些细节上雕花。<font color="green"> 100% </font>
 
 
 # 追求真理
@@ -26,6 +27,7 @@ tags:
 
 读哲学入门书籍《大问题》罗素的《西方哲学简史》，基于以上主干和自己的兴趣，去探究感兴趣的哲学分支。
 
+> 年底复盘：自己的信仰困扰解决了，哲学没有继续读下去。
 
 # 个人健康
 
@@ -42,41 +44,52 @@ tags:
 
 去医院体检，医生说前列腺增大且有钙化灶。吃了两周抗生素，好一些了。随着年龄的增长，身体会越来越差，不要透支身体。以后每天要坚持一段时间的站立办公。
 
+> 年底复盘： <font color="green"> 70分 </font>，通过不懈的努力，血脂又降回去了。
+
 
 # 家庭
 
 ## 1. 夫妻关系
 
 - 帮助妻子设定目标，鼓励和帮助她完成自己的人生计划。
-- 每半年带妻子出去旅游一次。
+- 每半年带妻子出去旅游一次。 
 
 
-## 2. 教养孩子
+## 2. 教养孩子 <font color="green"> 80% </font>
 
-## 3.  孝敬父母和爷爷奶奶
+> 年底复盘： 我今年已经尽力了。
+
+## 3.  孝敬父母和爷爷奶奶 <font color="green"> 10% </font>
 
 ## 3.1 每个月寄给爸爸妈妈爷爷奶奶礼物。
 
 给爷爷奶奶买排骨，打印照片寄回去；给岳父岳母买钙尔奇；给妈妈买血糖试纸。
 
-
 ## 3.2 每周给爸爸妈妈和爷爷奶奶打电话。
 
 多鼓励，少发怒。我妈的性格大变，可能是三次脑梗导致的。如果最终神都不苛责她，我何必苛责她呢。
 
+> 年底复盘：差不多每天都在给爸妈和爷爷奶奶打电话，也给爸妈钱，也给他们买东西。但是在孝敬父母这件事上，我觉得我一点都不及格。12月份回了一趟济南，发现奶奶身体越来越差，已经不能正常走路了，卧室里也一股尿的味道。我心里是爱奶奶的，但是也确实不喜欢那很大的味道。比起我的姐姐和姑姑，我觉得我做的就太差劲了，她常常给我奶奶打扫卫生。
+> 
+> 以前我总觉得，他们年纪大了，看看孩子们的照片就很开心。但是他们也需要被爱啊，也需要被搀扶着晒晒太阳，也需要被端尿盆，也需要有人护理，这才是爱他们，这才是他们关心的。如果我爱他们，就应该在这些细微之处爱他们，而不是寄点钱和几张破照片回去。
 
 # 学习
 
 
-## 1. 每天复习 Anki 卡片
+## 1. 每天复习 Anki 卡片 <font color="green"> 100% </font>
 
-## 2. 学习前端，达到初级前端程序员的水平。
+## 2. 学习前端，达到初级前端程序员的水平。<font color="green"> 10% </font>
 
-## 3. 练习英文
+> 年底复盘： 今年就搞懂了什么是 webpack。
+
+
+## 3. 练习英文 <font color="green"> 100% </font>
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-## 4. 拿到 AWS Certified Solutions Architect 证书 ✔
+> 年底复盘：今年英语进步挺大的，但是也发现了问题，一旦不说，退化就很严重，还是要常说常练。
+
+## 4. 拿到 AWS Certified Solutions Architect 证书 <font color="green"> 100% </font>
 
 ![](https://mednoter.com/media/files/2021/2021-04-17_18-40-27.jpg)
 
@@ -84,38 +97,52 @@ tags:
 
 # 工作
 
-## 帮助项目切分 MicroService
+## 帮助项目切分 MicroService <font color="green"> 80% </font>
 
 - 《Monolith to Microservices》
 - 《Building Microservices》
 - 《Building Event-Driven Microservices》
 
 
-## 做好 Onboarding 这个子产品，技术和产品，两方面都要努力。
+## 做好 Onboarding 这个子产品，技术和产品，两方面都要努力。<font color="green"> 75% </font>
 
 - 熟悉主流的 HRIS 系统
 - 熟悉 HR 工作内容
 
 
-## Know customers better
+## Know customers better <font color="green"> 80% </font>
 
 Watch Client Video every week, attend meeting with customer
 
+> 年底复盘： 今年和客户直接开会比较多，虽然做的没那么好，但是也算尽力了。
 
-# 教会服侍
+# 教会服侍 <font color="green"> 80% </font> 
 
 生命枯干，各种疑惑，不要勉强自己了。
 
+> 年底复盘：今年做的最多的就是招待小组，招待孩子们。避免自己陷入到争吵和抱怨中。
 
 # 其他业余小爱好
 
-## 组织 Ruby 上海地区的线下聚会。
+## 组织 Ruby 上海地区的线下聚会。<font color="green"> 80% </font> 
 
-## 学一下 Anki 的项目源码，尝试提交代码
+> 年底复盘：我感觉很多做 Ruby 的都是在国外的公司上班，其实可以和电鸭社区合作，开一些专题类聚会。
 
-## 录一个 Anki 公开课 (optional, 2020, 2021)
 
-## 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021)
+## 学一下 Anki 的项目源码，尝试提交代码 <font color="red"> 0% </font> 
+
+> 年底复盘：毫无进展。
+
+
+## 录一个 Anki 公开课 (optional, 2020, 2021) <font color="red"> 0% </font>
+
+> 年底复盘：毫无进展。
+
+
+## 用 Python 写个 PubMed 小网站，练习 Python。(optional, low priority, 2020, 2021) <font color="green"> 80% </font>
+
+
+> 年底复盘：几百个G的数据存到数据库里，再加上 Elasticsearch 每个月吃掉好几千的预算，这已经不是业余小爱好了，已经变成了碎钞机了。又不赚钱，不折腾了。
 
 ## 糖尿病食谱小助手 (optional, 2020, 2021)
 
@@ -135,6 +162,7 @@ Watch Client Video every week, attend meeting with customer
 
 ## 可以弄一个 AWS solution Architect Associate 的真题网站
 
+> 年底复盘： 一时兴起，不要搞了。
 
 # Ryan's Weekly Reviews
 
@@ -395,13 +423,18 @@ Watch Client Video every week, attend meeting with customer
 
 **week33**
 
-[health] 因为近两周 10:30 PM和美国开会，我的作息乱的一塌糊涂，身体崩盘，颈椎病复发，而且也感冒了。
+[health] 因为近两周 10:30 PM和美国开会，我的作息乱的一塌糊涂，身体崩盘，颈椎病复发，而且也感冒了。 
+ 
 [learn] 睡眠变差后，语言功能下降的也厉害，和别人说话时，跟不上别人的节奏，英语突然也听不懂了。
-[learn] 开始学习 Javascript
+
+[learn] 开始学习 Javascript  
 [哲学] 读完了大半本苏菲的世界，错误很少，真实本好书。我记得高中读过一遍，读的毛骨悚然，现在依然是有点。
-[信仰] 因为生活各方面支出在增加，攒不下钱了。有点让我烦躁。再加上又要搬家，我脑子里都惦记着“如何多赚点钱？” 心静不下来。
-[family] 这周和父亲吵架了，原因是他经常贬低我的工作为“打工仔”，贬低我的收入没有别人高。我知道他心里不是这么想的，就是嘴贱，让我难受。事后我很后悔，我为什么选择生气呢？你爱怎么说就怎么说吧，“nothing to prove”，我又不是为你而活，我的价值也不需要你承认。但是后来他居然打电话向我道歉了，我很惊讶，这是他人生第一次在语言上向我道歉吧。
-[family] 关于刘小坤囤东西，导致大量东西过保质期，周五小组大家讨论，刘小坤一落泪，大家顿时有开始和我辩论，替刘小坤说话。在道理上，他们说的其实都是错的，根本站不住脚，但是就是嘴硬，我花了好多的劲和他们辩论。周日读彼得前书，解决之道是乃是体贴她的软弱，并不是“证明她错了”。
+
+[信仰] 因为生活各方面支出在增加，攒不下钱了。有点让我烦躁。再加上又要搬家，我脑子里都惦记着“如何多赚点钱？” 心静不下来。  
+
+[family] 这周和父亲吵架了，原因是他经常贬低我的工作为“打工仔”，贬低我的收入没有别人高。我知道他心里不是这么想的，就是嘴贱，让我难受。事后我很后悔，我为什么选择生气呢？你爱怎么说就怎么说吧，“nothing to prove”，我又不是为你而活，我的价值也不需要你承认。但是后来他居然打电话向我道歉了，我很惊讶，这是他人生第一次在语言上向我道歉吧。 
+   
+[family] 关于刘小坤囤东西，导致大量东西过保质期，周五小组大家讨论，刘小坤一落泪，大家顿时有开始和我辩论，替刘小坤说话。在道理上，他们说的其实都是错的，根本站不住脚，但是就是嘴硬，我花了好多的劲和他们辩论。周日读彼得前书，解决之道是乃是体贴她的软弱，并不是“证明她错了”。  
 
 - 强烈的购买欲，囤东西，大量过期，本身就是错的，这是无可争辩的。
 - 你们作丈夫的，要按情理跟妻子共同生活，体贴女性是比较软弱的器皿；要尊重她，因为她也与你一同承受生命之恩。彼得前书‬ 3:7
@@ -436,7 +469,9 @@ Watch Client Video every week, attend meeting with customer
 **week37**
 
 [learning] 学习了 webpack，知道它是干什么的了。加油，前端一点点开始搞起来！争取前端达到初级水平。
+
 [work] delegate 自己的一些在 onboarding 的职责给别人，这样不至于自己忙的焦头烂额且情绪崩溃。
+
 [family] 刘小坤开始跟着我查圣经了，这真是一个天大的事情，宝贵的远超一切。
 
 
@@ -462,6 +497,46 @@ Watch Client Video every week, attend meeting with customer
 ![](https://mednoter.com/media/files/2021/2021-10-25-Ryan.jpg)
 
 下周生活估计会安定一些。
+
+
+**week48**
+
+过去几周发生的事情让我的生活状态急转直下：
+
+噪音
+
+我的楼上的老先生，从早到晚的发出噪音。让我越来越敏感，精神总是处于紧绷状态。有时候半夜被他嘎嘎作响的走路声吵醒，心里极其气愤。找了几次都没用，孤寡老人，性格孤僻，十分难沟通。怕他一生气，人直接没了。
+
+自从开始了城市生活，睡好觉简直要看运气。在杭州时，小区里电梯总是半夜发出轰隆声。在上海市，老公房里左邻右舍看电视到12点才睡觉，早晨大爷6点钟开始楼下闲聊。哎，现在我又极其厌恶大城市了。
+
+每次在城市里被折腾的难受，就想回老家，晚上9点就都睡了。
+
+阿姨离职了
+
+我家阿姨要回老家照顾自己的爸爸妈妈，所以提出离职了。我和妻子除了工作，还要照顾孩子，工作量一下陡升。
+
+我明显感觉的自己的精神状态很差，又开始焦虑和抑郁了。昂扬的斗志全没了，整个人非常颓废。
+
+**week49 - 年底**
+
+因为长时间被楼上噪音吵的睡不好，我的状态很差，情绪崩盘。带着孩子回老家了2周。
+
+回到上海后，还是很焦虑，我是被噪音彻底打倒了。曾经斗志昂扬，每天时间和日程都安排的很满，现在却想一个废人一样。刘小坤帮助我，沐沐在帮助我，小组一直在帮助我。每天晚上，全家人要一起为睡眠祷告。
+
+虽然噪音有错，但是我觉得我的“雄心壮志”让噪音问题变得更严重的根本原因。
+
+- 拼命的学习，拼命的工作。
+- 所有时间都安排的满满当当，所有事情都要按计划进行。不允许浪费一丁点时间。
+
+我憎恨楼上，是因为他打乱了我的计划，影响了我的工作，学习，以及光明的前途！
+
+但是年前我不是说好了吗？享受平凡的快乐。
+
+传道书：我所见为善为美的，就是人在神赐他一生的日子吃喝，享受日光之下劳碌得来的好处，因为这是他的份。神赐人资财丰富，使他能以吃用，能取自己的份，在他劳碌中喜乐，这乃是神的恩赐。 他不多思念自己一生的年日，因为神应他的心使他喜乐。
+
+你为什么又如此焦虑呢？
+
+人生不如意，十之八九，如果不如意，就不如意吧。
 
 
 # 历年新年计划的存档
