--- a/_posts/2022-03-20-no-tv.md
+++ b/_posts/2022-03-20-no-tv.md
@@ -8,6 +8,8 @@ tags:
   -
 ---
 
+![](https://mednoter.com/media/files/2022/20161005_142138.jpeg)
+
 小的时候，我爸爸妈妈天天忙着吵架，没空照顾我。是爷爷奶奶把我拉扯大的。爷爷是工人，奶奶是农民，并不是知识分子。
 
 他们在教育上能给我的指导非常的有限。但是他们一个的决定，却对我的学习起了决定性的作用：他们拆掉了家里的电视，只在寒暑假的时候把电视搬出来给我和弟弟解解馋。
@@ -20,7 +22,7 @@ tags:
 
 拆掉电视，就拆掉了整个家庭的放纵退路。疲惫时，就只能睡觉；无聊时，就发呆，无聊，或跑步，或读书。总之，全家人不会再做错误的决策——躺在沙发上看电视打发时间，无所事事。
 
-希望我的孩子长大了，也把家里的电视卸掉，持守老爷爷老奶奶给你的文化遗产。他是否是块学习的料，就看他自己的造化了。
+希望我的孩子长大了，也把家里的电视卸掉，持守老爷爷老奶奶的文化遗产。
 
 ![](https://mednoter.com/media/files/2022/2022-03-20-books.jpg)
 
