--- a/_posts/2022-03-20-no-tv.md
+++ b/_posts/2022-03-20-no-tv.md
@@ -1,5 +1,5 @@
 ---
-title: "爷爷奶奶的文化遗产：拆掉电视"
+title: "爷爷奶奶的文化传承：拆掉电视"
 layout: post
 guid: RKSg9dSUEEN4c2u
 date: 2022-03-20 21:23:38
@@ -10,19 +10,19 @@ tags:
 
 ![](https://mednoter.com/media/files/2022/20161005_142138.jpeg)
 
-小的时候，我爸爸妈妈天天忙着吵架，没空照顾我。是爷爷奶奶把我拉扯大的。爷爷是工人，奶奶是农民，并不是知识分子。
+我们家祖上几代都不是文化人，其实并没有什么传承。
 
-他们在教育上能给我的指导非常的有限。但是他们一个的决定，却对我的学习起了决定性的作用：他们拆掉了家里的电视，只在寒暑假的时候把电视搬出来给我和弟弟解解馋。
+小的时候，我爸爸妈妈天天忙着吵架，没空照顾我。是爷爷奶奶把我拉扯大的。爷爷是工人，奶奶是农民。他们在教育上能给我的指导非常的有限，但是他们一个的决定，却对我的学习起了决定性的作用：**他们拆掉了家里的电视，只在寒暑假的时候把电视搬出来给我和弟弟解解馋。**
 
-所以爷爷每天只能提着自己的破收音机消遣，奶奶本来就是勤快人，每天忙来忙去，不看电视，倒也无所谓。
+爷爷每天只能提着自己的破收音机消遣，奶奶本来就是勤快人，每天忙来忙去，不看电视，倒也无所谓。
 
 所以小时候放学回家做完作业，无所事事，只能去大街上找其他孩子玩(体育锻炼）。或者借别人的连环画，读书消遣（提高阅读兴趣）。
 
-这对于我是一笔极其丰富的文化遗产，当我成家后，也异常坚决的把家里的电视拆掉了。
+这对于我是一笔极其丰富的文化传承，当我成家后，也异常坚决的把家里的电视拆掉了。
 
-拆掉电视，就拆掉了整个家庭的放纵退路。疲惫时，就只能睡觉；无聊时，就发呆，无聊，或跑步，或读书。总之，全家人不会再做错误的决策——躺在沙发上看电视打发时间，无所事事。
+拆掉电视，就拆掉了整个家庭的退路。疲惫时，就只能睡觉；无聊时，就发呆，无聊，或跑步，或读书。总之，全家人不会再做错误的决策——躺在沙发上看电视打发时间，无所事事。
 
-希望我的孩子长大了，也把家里的电视卸掉，持守老爷爷老奶奶的文化遗产。
+希望我的孩子长大了，也把家里的电视卸掉，持守老爷爷老奶奶的文化传承。
 
 ![](https://mednoter.com/media/files/2022/2022-03-20-books.jpg)
 
