--- a/_posts/2022-03-20-no-tv.md
+++ b/_posts/2022-03-20-no-tv.md
@@ -12,7 +12,7 @@ tags:
 
 我们家祖上几代都不是文化人，其实并没有什么传承。
 
-小的时候，我爸爸妈妈天天忙着吵架，没空照顾我。是爷爷奶奶把我拉扯大的。爷爷是工人，奶奶是农民。他们在教育上能给我的指导非常的有限，但是他们一个的决定，却对我的学习起了决定性的作用：**他们拆掉了家里的电视，只在寒暑假的时候把电视搬出来给我和弟弟解解馋。**
+小的时候，我爸爸妈妈天天忙着吵架，没空照顾我。是爷爷奶奶把我拉扯大的。爷爷是供销社的退休工人，奶奶是农民。他们在教育上能给我的指导非常的有限，但是他们一个的决定，却对我的学习起了决定性的作用：**他们拆掉了家里的电视，只在寒暑假的时候把电视搬出来给我和弟弟解解馋。**
 
 爷爷每天只能提着自己的破收音机消遣，奶奶本来就是勤快人，每天忙来忙去，不看电视，倒也无所谓。
 
