--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -8,7 +8,7 @@ tags:
   -
 ---
 
-<span style="color:blue">⚠️ 警告: 以上工具仅用于开发工作，若使用者违反国家法律法规，后果自负，与本文无关。</span>
+<span style="color:red">⚠️ 警告: 以上工具仅用于开发工作，若使用者违反国家法律法规，后果自负，与本文无关。</span>
 
 肉身在国内的话，配置开发环境是一种折磨。
 
