--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -1,5 +1,5 @@
 ---
-title: "Surge, 一款极大提高中国程序员的生产力工具"
+title: "提高中国程序员的幸福感的开发工具"
 layout: post
 guid: YjEhIUCbBpxc
 date: 2022-04-18 21:25:30
@@ -8,7 +8,7 @@ tags:
   -
 ---
 
-<span style="color:red">⚠️ 警告: 以上工具仅用于开发工作，若使用者违反国家法律法规，后果自负，与本文无关。</span>
+> <span style="color:red"> 警告: 本文介绍的工具仅用于开发工作，若使用者违反国家法律法规，后果自负，与本文无关。</span>
 
 肉身在国内的话，配置开发环境是一种折磨。
 
