--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -12,21 +12,15 @@ tags:
 
 肉身在国内的话，配置开发环境是一种折磨。
 
-- npm install，特别慢。
-- bundle install 特别慢。
-- yarn install 特别慢。
+ `yarn install` 特别慢；`npm install` 特别慢；`bundle install` 特别慢。为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像。
 
-为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像。
+访问 Stack Overflow 特别慢，访问 Github 特别慢，你必须给浏览器设置 HTTP Proxy。
 
-- Stack Overflow 特别慢。
-- 访问 Github 特别慢。
-
-你必须给浏览器设置 HTTP Proxy。
-
-目前主流的网络工具都提供的是 HTTP Proxy。ssh 可以设置 proxy，浏览器可以设置 proxy，git 可以设置 proxy。但是 HTTP Proxy 有很多缺点：
+目前主流的网络工具都提供的是 HTTP Proxy。SSH 可以设置 proxy，浏览器可以设置 proxy，git 可以设置 proxy。但是 HTTP Proxy 有很多缺点：
 
 - 它工作在 Layer 7 应用层，并不是所有的软件都支持。
-- 每次切换（或关闭） Proxy 的地址，你要逐个软件修改。terminal，chrome，system proxy，非常繁琐。我甚至需要写一个 shell 脚本，根据 wifi 的名字自动切换。如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。我曾经在《提高 Github 的访问速度》这篇文章中详细的介绍过这种方法。
+- 每次切换（或关闭） Proxy 的地址，你要逐个软件修改。terminal，chrome，system proxy，非常繁琐。我甚至需要写一个 shell 脚本，根据 wifi 的名字自动切换。如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
+
 
 ## Surge
 
