--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -1,5 +1,5 @@
 ---
-title: "提高中国程序员的幸福感的开发工具"
+title: "提高中国程序员幸福感的网络调试工具"
 layout: post
 guid: YjEhIUCbBpxc
 date: 2022-04-18 21:25:30
@@ -31,6 +31,10 @@ tags:
 如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
 
 ![](https://mednoter.com/media/files/2022/2022-04-18-surge.jpg)
+
+Surge 的功能并不仅限如此，它还可以对 HTTP 抓包，通过中间人攻击对HTTPs 进行抓包。你无需再需要购买 Charles Web Debugging Proxy 了。
+
+买一个软件，2份用途，买到就是赚到。
 
 ## Proxy Server
 
