--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -19,7 +19,7 @@ tags:
 目前主流的网络工具都提供的是 HTTP Proxy。SSH 可以设置 proxy，浏览器可以设置 proxy，git 可以设置 proxy。但是 HTTP Proxy 有很多缺点：
 
 - 它工作在 Layer 7 应用层，并不是所有的软件都支持。
-- 每次切换（或关闭） Proxy 的地址，你要逐个软件修改。terminal，chrome，system proxy，非常繁琐。我甚至需要写一个 shell 脚本，根据 wifi 的名字自动切换。如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
+- 每次切换（或关闭） Proxy 的地址，你要逐个软件修改。terminal，chrome，system proxy，非常繁琐。我曾经还写过一个 shell 脚本，根据 wifi 的名字自动切换，如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
 
 
 ## Surge
@@ -34,7 +34,7 @@ tags:
 
 Surge 的功能并不仅限如此，它还可以对 HTTP 抓包，通过中间人攻击对HTTPs 进行抓包。你无需再需要购买 Charles Web Debugging Proxy 了。
 
-买一个软件，2份用途，买到就是赚到。
+买一个软件，两份用途，买到就是赚到。
 
 ## Proxy Server
 
