--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -32,13 +32,13 @@ tags:
 
 ![](https://mednoter.com/media/files/2022/2022-04-18-surge.jpg)
 
-Surge 的功能并不仅限如此，它还可以对 HTTP 抓包，通过中间人攻击对HTTPs 进行抓包。你无需再需要购买 Charles Web Debugging Proxy 了。
+Surge 的功能并不仅限如此，它还可以对 HTTPs 进行抓包，方便调试 API。
 
-买一个软件，两份用途，买到就是赚到。
+单独购买网络调试工具 Charles Web Debugging Proxy 就要花费50美金啊，而买一个 Surge，就可以两份用途，简直赚翻了。
 
 ## Proxy Server
 
-Surge 一个网络软件，并不提供 Proxy 服务，所以你需要搭建自己的 Proxy 服务器。但是不建议这么干，因为太浪费时间，时间就是金钱，所以推荐你购买这类服务，比较稳定的是 `QWdlbnRORU8=`。
+Surge 是一个网络软件，并不提供 Proxy 服务器，所以你需要搭建自己的 Proxy 服务器。但是不建议这么干，因为太浪费时间，时间就是金钱，所以推荐你购买这类服务商，比较稳定的是 `QWdlbnRORU8=`。
 
 1. 它会维持一个服务器列表，服务器随便选。
 
