--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -10,53 +10,79 @@ tags:
 
 > <span style="color:red"> 警告: 本文介绍的工具仅用于开发工作，若使用者违反国家法律法规，后果自负，与本文无关。</span>
 
+## 前言
+
 肉身在国内的话，配置开发环境是一种折磨。
 
- `yarn install` 特别慢；`npm install` 特别慢；`bundle install` 特别慢。为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像。
+ `yarn install` 特别慢；`npm install` 特别慢；`bundle install` 特别慢。为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像，或者使用 HTTP Proxy。
 
-访问 Stack Overflow 特别慢，访问 Github 特别慢，你必须给浏览器设置 HTTP Proxy。
+`git clone` 慢，需要设置设置环境变量，指定 HTTP Proxy。
 
-目前主流的网络工具都提供的是 HTTP Proxy。SSH 可以设置 proxy，浏览器可以设置 proxy，git 可以设置 proxy。但是 HTTP Proxy 有很多缺点：
+```
+$ export http_proxy=http://127.0.0.1:8087
+$ export https_proxy=http://127.0.0.1:8087
+```
 
-- 它工作在 Layer 7 应用层，并不是所有的软件都支持。
-- 每次切换（或关闭） Proxy 的地址，你要逐个软件修改。terminal，chrome，system proxy，非常繁琐。我曾经还写过一个 shell 脚本，根据 wifi 的名字自动切换，如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
+ssh 登陆满，你可以在  .ssh/config` 文件中配置 HTTP Proxy。
 
+```
+Host github.com
+    User git
+    ProxyCommand ProxyCommand ncat --proxy 127.0.0.1:1080
+```
+
+访问 Stack Overflow 特别慢，访问 Github 特别慢，可以给 Chrome 浏览器下载一个插件 [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?hl=en) 来管理规则，提高访问速度。
+
+大部分问题，HTTP Proxy 都可以解决，就有个缺点——啰嗦。每次切换（或关闭） Proxy 的地址，你要逐个软件修改，terminal，chrome，ssh config。我曾经还写过一个 shell 脚本，根据 wifi 的名字自动切换，如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
+
+偷懒的人干脆为整个操作系统设置一个默认代理，这样就不必单独为每个软件设置了。但是这种思路有个缺点，太僵硬，国内国外的流量都代理，国内的流量也要绕地球一圈，速度就特别慢。
+
+此外 HTTP Proxy 工作在 OSI 网络模型的第七层"应用层"，并不是所有的软件都支持。扪心自问，你自己写的应用程序会检查和利用 HTTP Proxy 吗？
+
+未必。
 
 ## Surge
 
 如果你使用的是 MacOS，我建议你直接购买 [Surge](https://nssurge.com/buy_now) 这款网络调试工具。我没有拿过回扣，也没有提成，是凭良心推荐。
 
-它的最大亮点是 “[增强模式](https://surge.mitsea.com/others/enhanced-mode)”，它会安装一个虚拟网卡并设置为默认路由，自动分发流量。这相当于在 Layer 2 分发流量了。你就不需要费尽心机的为各个软件设置 Proxy。
+它的最大亮点是 “[增强模式](https://surge.mitsea.com/others/enhanced-mode)”，它会安装一个虚拟网卡并设置为默认路由，根据规则自动分发流量。这相当于在 OSI 的底层就分流了，应用层的软件根本察觉不到 Proxy 的存在。
+
+重要的事情说三遍：
+
+如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
+
+如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
 
 如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
 
 ![](https://mednoter.com/media/files/2022/2022-04-18-surge.jpg)
 
-Surge 的功能并不仅限如此，它还可以对 HTTPs 进行抓包，方便调试 API。
+也许有人有人会推荐其他免费开源的网络调试工具，我就问一个问题：它在网络模型中，工作在第几层？如果是 HTTP Proxy，就不要谈了，因为它无法解决前言中提到的各种缺陷。
 
-单独购买网络调试工具 Charles Web Debugging Proxy 就要花费50美金啊，而买一个 Surge，就可以两份用途，简直赚翻了。
+此外 Surge 的功能并不仅限于此，它还可以对 HTTPs 进行抓包，方便调试 API。要知道单独购买一个网络调试工具 Charles Web Debugging Proxy 就要花费50美金啊，而买一个 Surge，就可以有两份用途，简直赚翻了。
 
 ## Proxy Server
 
-Surge 是一个网络软件，并不提供 Proxy 服务器，所以你需要搭建自己的 Proxy 服务器。但是不建议这么干，因为太浪费时间，时间就是金钱，所以推荐你购买这类服务商，比较稳定的是 `QWdlbnRORU8=`。
+Surge 是一个网络软件，并不提供 Proxy 服务器，所以你需要搭建自己的 Proxy 服务器。但是不建议这么干，因为太浪费时间，时间就是金钱，所以推荐你购买这类服务商，也不贵，一年就几百块钱，比较稳定的是 `QWdlbnRORU8=`。
 
 1. 它会维持一个服务器列表，服务器随便选。
 
     ![](https://mednoter.com/media/files/2022/2022-04-18-neo.jpg)
 
-2. 它支持自定义 Surge 的规则。如果你熟悉 Surge 的各种配置，可以自行决定：
-
+2. 它支持自定义配置。如果你熟悉 Surge 的各种规则，可以自行决定：
     - 哪些网站走 Proxy，哪些网站不走 Proxy。
     - 默认路径选择直连，还是走 Proxy。
     ![](https://mednoter.com/media/files/2022/2022-04-18-config.jpg)
 
 ## 行动
 
-1. 购买 Surge，[https://nssurge.com/buy_now](https://nssurge.com/buy_now)
+1. 购买 Surge，[https://nssurge.com/buy_now](https://nssurge.com/buy_now)。Surge 的授权是终生（lifetime)，一次购买，终生享受。别再瞎折腾了，快点上船。此外 Surge 也有企业版，如果你是一家软件公司，可以购买企业版，大幅提高员工的生产力。
 2. 购买 Proxy Servers。 链接：`aHR0cHM6Ly9hZ25lby5jby8/cmM9b3Z0MTh3YWI=` ，使用这个链接，你我都会获得5元抵扣券。  
 
+## 参考链接
 
-
+1. [Stack Overflow: Getting Git to work with a proxy server](https://stackoverflow.com/a/19213999/5117552)
+2. [Stack Overflow: Connect with SSH through a proxy](https://stackoverflow.com/questions/19161960/connect-with-ssh-through-a-proxy)
 
 
 
