--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -16,14 +16,14 @@ tags:
 
  `yarn install` 特别慢；`npm install` 特别慢；`bundle install` 特别慢。为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像，或者使用 HTTP Proxy。
 
-`git clone` 慢，需要设置设置环境变量，指定 HTTP Proxy。
+git clone 慢，需要设置环境变量，指定 HTTP Proxy。
 
 ```
 $ export http_proxy=http://127.0.0.1:8087
 $ export https_proxy=http://127.0.0.1:8087
 ```
 
-ssh 登陆满，你可以在  .ssh/config` 文件中配置 HTTP Proxy。
+SSH 慢，需要在  .ssh/config` 文件中配置 HTTP Proxy。
 
 ```
 Host github.com
@@ -31,11 +31,11 @@ Host github.com
     ProxyCommand ProxyCommand ncat --proxy 127.0.0.1:1080
 ```
 
-访问 Stack Overflow 特别慢，访问 Github 特别慢，可以给 Chrome 浏览器下载一个插件 [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?hl=en) 来管理规则，提高访问速度。
+访问 Stack Overflow 慢，访问 Github 特别慢，需要给 Chrome 浏览器下载一个插件 [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?hl=en) 管理 Proxy，提高访问速度。
 
-大部分问题，HTTP Proxy 都可以解决，就有个缺点——啰嗦。每次切换（或关闭） Proxy 的地址，你要逐个软件修改，terminal，chrome，ssh config。我曾经还写过一个 shell 脚本，根据 wifi 的名字自动切换，如果去公司，就使用 Proxy A，如果在家里就使用 Proxy B。
+大部分问题，HTTP Proxy 都可以解决，就有个缺点——啰嗦。每次切换（或关闭） Proxy 的地址，你要逐个软件修改，terminal，chrome，ssh config。为此我还写过一个 shell 脚本来批量操作。
 
-偷懒的人干脆为整个操作系统设置一个默认代理，这样就不必单独为每个软件设置了。但是这种思路有个缺点，太僵硬，国内国外的流量都代理，国内的流量也要绕地球一圈，速度就特别慢。
+后来干脆为整个操作系统设置一个默认代理，这样就不必为每个软件单独设置了。但是这种思路有个缺点，太僵硬，国内国外的流量都通过代理，访问国内的网站也要绕地球一圈，速度就特别慢。
 
 此外 HTTP Proxy 工作在 OSI 网络模型的第七层"应用层"，并不是所有的软件都支持。扪心自问，你自己写的应用程序会检查和利用 HTTP Proxy 吗？
 
