--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -49,11 +49,11 @@ Host github.com
 
 重要的事情说三遍：
 
-如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
+如果你购买了 Surge，请务必打开增强模式(enhanced mode)，否则暴殄天物。
 
-如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
+如果你购买了 Surge，请务必打开增强模式(enhanced mode)，否则暴殄天物。
 
-如果你购买了 Surge，请务必打开增强模式，否则暴殄天物。
+如果你购买了 Surge，请务必打开增强模式(enhanced mode)，否则暴殄天物。
 
 ![](https://mednoter.com/media/files/2022/2022-04-18-surge.jpg)
 
