--- a/_posts/2022-04-18-surge.md
+++ b/_posts/2022-04-18-surge.md
@@ -14,7 +14,7 @@ tags:
 
 肉身在国内的话，配置开发环境是一种折磨。
 
- `yarn install` 特别慢；`npm install` 特别慢；`bundle install` 特别慢。为了提高下载速度，你必须把各种依赖的下载地址替换为国内的镜像，或者使用 HTTP Proxy。
+yarn install 慢；npm install 慢；bundle install 慢。为了提高下载速度，必须把各种依赖的下载地址替换为国内镜像，或者使用 HTTP Proxy。
 
 git clone 慢，需要设置环境变量，指定 HTTP Proxy。
 
@@ -33,13 +33,13 @@ Host github.com
 
 访问 Stack Overflow 慢，访问 Github 特别慢，需要给 Chrome 浏览器下载一个插件 [Proxy SwitchyOmega](https://chrome.google.com/webstore/detail/proxy-switchyomega/padekgcemlokbadohgkifijomclgjgif?hl=en) 管理 Proxy，提高访问速度。
 
-大部分问题，HTTP Proxy 都可以解决，就有个缺点——啰嗦。每次切换（或关闭） Proxy 的地址，你要逐个软件修改，terminal，chrome，ssh config。为此我还写过一个 shell 脚本来批量操作。
+以上是大部分程序员的三板斧，但有诸多不便。每次切换Proxy 的线路，或者开关 Proxy，都要逐个修改各软件的配置，terminal，chrome，ssh config，有人甚至还写 shell 脚本来批量操作。
 
-后来干脆为整个操作系统设置一个默认代理，这样就不必为每个软件单独设置了。但是这种思路有个缺点，太僵硬，国内国外的流量都通过代理，访问国内的流量也要绕地球一圈，速度就特别慢。
+也有人为整个操作系统设置一个默认代理，这样就不必为每个软件单独设置了。但是这会导致国内外的流量都走代理，访问国内的网站也要绕地球一圈。国外网站变快了，国内网站变慢了。
 
-此外 HTTP Proxy 工作在 OSI 网络模型的第七层"应用层"，并不是所有的软件都支持。扪心自问，你自己写的应用程序会检查和利用 HTTP Proxy 吗？
+此外 HTTP Proxy 工作在 OSI 网络模型的第七层"应用层"，并不是所有的软件都支持。即使你设置了系统代理，有些小众的软件可能不理睬这个设置。
 
-未必。
+这些问题耗费了程序员大量的时间。
 
 ## Surge
 
