--- a/_posts/2022-07-02-teach-kid.md
+++ b/_posts/2022-07-02-teach-kid.md
@@ -27,7 +27,7 @@ tags:
 教小孩这件事，真是父母体力，智力，以及耐性的马拉松。
 
 
-## 教数学太难了
+## 教数学遇到的坑
 
 一开始我买了本习题集，打算每天让沐沐练几个题就行了。实践下来，毫无可行性。
 
@@ -62,7 +62,7 @@ step4： 8 + 4 = 8 + 2 + 2 = 12
 
 
 
-## 教时间太难了
+## 教时间遇到的坑
 
 沐沐6岁之前，起床总是拖拖拉拉。我就指着钟表大声呵斥，“看，都几点了，还睡，我们还有20分钟的时间“。
 
@@ -94,7 +94,7 @@ step4： 8 + 4 = 8 + 2 + 2 = 12
 
 
 
-## 教英语太难了。
+## 教英语遇到的坑
 
 我小时候，英语老师布置的作业通常是 “抄写100遍单词”。
 
