polish plan for 2023

--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -11,11 +11,11 @@ tags:
 
 今年不做计划了。
 
-1. 计划太多，生活越缺乏弹性，总觉得在虐待自己。
-2. 人到中年，已没有太多令人兴奋的事情。一些目标不值得追求，也不想追求。
-3. 养成好习惯，按部就班的生活也挺好。但行好事，莫问前程。
+1. 计划太多，生活越缺乏弹性，总在虐待自己。
+2. 已没有太多令人兴奋的事情。一些目标不值得追求，也不想追求。
+3. 按部就班的生活也挺好，但行好事，莫问前程。
 
-就这样吧，定下基调用于自勉。不堆砌细节，为不可能留下可能的空间。
+就这样吧，设定几个原则用于自勉，不堆砌细节了。
 
 ----
 
@@ -25,14 +25,15 @@ tags:
 
 ## 家庭
 
-给别人自主权，允许别人犯错，改掉“好为人师”的臭毛病，改掉自己的强烈的控制欲。
+给别人自主权，改掉“好为人师”的臭毛病。允许别人犯错，允许糟糕的事情发声，改掉自己的强烈的控制欲。
 
 继续鼓励妻子每周和 Jaimie 用英文聊天，允许她犯错，允许她绕弯路，允许她按奇怪的方式学英语。她若不需要指点，我不要好为人师。
 
 妻子开始承担教会财务的工作，做事情有点拖沓，看的我着急。我要克制，不要插嘴。
 
-给沐沐学习更多的自主权，允许他犯错，低效，磨叽，绕弯路，非最优解，他若不需要帮助，我不要好为人师。他若寻求帮助，就给他最大的支持。要沉得住气，学着一口气憋2年。
+**给沐沐学习更多的自主权**，允许他犯错，低效，磨叽，绕弯路，非最优解。他若不需要帮助，我不要好为人师。他若寻求帮助，就给他提供最好的资源和支持。要沉得住气，一口气憋两年也要沉住气。
 
+**一言九鼎，不给沐沐加作业**，他做完作业就可以玩，早做完早玩。这样他不磨叽，我也不用唠叨。
 
 ## 工作和学习
 
