update new year plan

--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -1,5 +1,5 @@
 ---
-title: "2023 计划 (草案)"
+title: "2023 计划"
 layout: post
 guid: EhVtYNcCZAYY21
 date: 2023-01-03
@@ -12,18 +12,18 @@ tags:
 今年不做计划了。
 
 1. 计划太多，生活越缺乏弹性，总在虐待自己。
-2. 已没有太多令人兴奋的事情。一些目标不值得追求，也不想追求。
+2. 没有太多令人兴奋的事情，没有追求的冲动。
 3. 按部就班的生活也挺好，但行好事，莫问前程。
 
 就这样吧，设定几个原则用于自勉，不堆砌细节了。
 
-----
-
-## 信仰
+#### 信仰
 
 申命记：不可忘记你的主。
 
-## 家庭
+
+#### 家庭
+
 
 给别人自主权，改掉“好为人师”的臭毛病。允许别人犯错，允许糟糕的事情发声，改掉自己的强烈的控制欲。
 
@@ -35,7 +35,11 @@ tags:
 
 **一言九鼎，不给沐沐加作业**，他做完作业就可以玩，早做完早玩。这样他不磨叽，我也不用唠叨。
 
-## 工作和学习
+**维护家庭爱的氛围**，营造彼此相爱的氛围可能需要一个月，毁了它只需要几分钟。说话态度，口气，音调，都需注意。
+
+
+#### 工作和学习
+
 
 为客户创造价值，为社会创造价值。工作要对别人有益处，站着赚钱，且赚干净钱。
 
@@ -52,4 +56,71 @@ tags:
     - [CKA](https://www.cncf.io/certification/cka/)
     - [CKAD](https://www.cncf.io/certification/ckad/)
 
+---
 
+循规蹈矩的生活很容易被打断，比如出差，或者大病一场，过年。等生活重回正轨时，一些习惯就丢了。
+
+过去的老习惯，还需常常温习，不要丢。
+
+#### 信仰习惯
+
+- 三选一。全家人一起早晨听圣经；晚上一起敬拜，晚上一起祷告。
+- 写日记
+
+
+#### 健康习惯
+
+- 能早起就早起，不能早起别勉强。
+- 每天早晨喝一大杯水
+- 开会时，升起办公桌，保证每天有站立办公的时间。
+- 工作45分钟，锻炼15分钟。
+	- 俯卧撑
+	- 引体向上
+	- 卷腹
+	- 提肛20个
+	- 收下巴锻炼颈椎
+	- 臀桥
+- 打喷嚏时头后仰，保护颈椎。
+- 低脂饮食，不吃碳水化合物
+- 每天晚上慢跑 5km
+- 争取 21:30 躺在床上，准备睡觉。
+- 不喝酒，每次喝酒前列腺都不畅。
+- 不适合豆腐乳。它可能干扰了消化系统的节律，大便粘稠，不成块。
+- 不适合吃香肠。香肠会导致胃食管反流。
+- 下班后不看电子设备，多看看书，背单词。
+
+
+#### 家庭习惯
+
+- 时时刻刻维护家里爱的氛围，说话态度，口气，都需操练。爱能遮盖很多的矛盾。（女人感受不到爱，就会拆台，这是我过去几年忽视的一个变量。）
+- 每个季度回一趟老家，看望爸爸妈妈爷爷奶奶
+- 中午独自吃饭时，和奶奶聊聊天
+- 每周给我爸妈打个电话
+- 多储蓄
+- 不需要的东西，一份钱都不要花。
+- 不要高估钱财的作用，它并不可靠。战争/屠杀/文革随时有可能发生，没有绝对安全。
+- 家中富足睡不安稳，不如穷乏却睡的香甜。
+
+
+#### 学习习惯
+
+- 下午四点没事的话，背单词，复习 Anki 中的卡片。
+- 
+
+
+#### 教会习惯
+
+- 即使知道大部分人都是虎头蛇尾，即使自己是个悲观者，也要多鼓励，少挖苦。你如何鼓励自己的儿子，在教会里也要如此鼓励别人。
+- 人都是刺猬，爱彼此越深，伤害越深，不要因为伤害就对关系失望和退缩。
+
+
+
+## 历史回顾
+
+- [2022 计划](/2022-07-08-plan-for-the-Q3-and-Q4-of-2022.html)
+- [2020 计划](/plan-for-2020.html)
+- [2019 计划](/plan-for-2019.html)
+- [2017 和 2018 计划](/plan-for-2017-and-2018.html)
+- [2016 计划](/study-plan-2016.html)
+- [2015 计划](/my-2014.html)
+- [2013 和 2014 计划](/study-plan.html)
