--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -88,11 +88,14 @@ tags:
 - 不适合豆腐乳。它可能干扰了消化系统的节律，大便粘稠，不成块。
 - 不适合吃香肠。香肠会导致胃食管反流。
 - 下班后不看电子设备，多看看书，背单词。
-
+- 拉屎不看手机，防止痔疮
+- 左右手交替使用鼠标，每个月交替一次。奇数月份右侧，偶数月份左侧。
+- 咀嚼食物的磨牙，每个月左右交替一次。奇数月份右侧，偶数月份左侧。
 
 #### 家庭习惯
 
 - 时时刻刻维护家里爱的氛围，说话态度，口气，都需操练。爱能遮盖很多的矛盾。（女人感受不到爱，就会拆台，这是我过去几年忽视的一个变量。）
+- always hope. 多鼓励家人的闪光点，少打击家人的缺点。
 - 每个季度回一趟老家，看望爸爸妈妈爷爷奶奶
 - 中午独自吃饭时，和奶奶聊聊天
 - 每周给我爸妈打个电话
