five year plan for family

--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -89,8 +89,8 @@ tags:
 - 不适合吃香肠。香肠会导致胃食管反流。
 - 下班后不看电子设备，多看看书，背单词。
 - 拉屎不看手机，防止痔疮
-- 左右手交替使用鼠标，每个月交替一次。奇数月份右侧，偶数月份左侧。
-- 咀嚼食物的磨牙，每个月左右交替一次。奇数月份右侧，偶数月份左侧。
+- 左右手交替使用鼠标，每个月交替一次。奇数月份左侧，偶数月份右侧。
+- 咀嚼食物的磨牙，每个月左右交替一次。奇数月份左侧，偶数月份右侧。
 
 #### 家庭习惯
 
