--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -9,13 +9,7 @@ tags:
 ---
 
 
-今年不做计划了。
-
-1. 计划太多，生活越缺乏弹性，总在虐待自己。
-2. 没有太多令人兴奋的事情，没有追求的冲动。
-3. 按部就班的生活也挺好，但行好事，莫问前程。
-
-就这样吧，设定几个原则用于自勉，不堆砌细节了。
+## 2023年需要尝试的新方向
 
 #### 信仰
 
@@ -41,7 +35,7 @@ tags:
 #### 工作和学习
 
 
-为客户创造价值，为社会创造价值。工作要对别人有益处，站着赚钱，且赚干净钱。
+工作要对别人有益处。为客户创造价值，为社会创造价值。
 
 1. **做好集成**
 
@@ -58,9 +52,14 @@ tags:
 
 ---
 
-循规蹈矩的生活很容易被打断，比如出差，或者大病一场，过年。等生活重回正轨时，一些习惯就丢了。
+## 2011-2022 年沉淀下来的习惯
 
-过去的老习惯，还需常常温习，不要丢。
+我是个动物，有自己的行为模式，在对自己的观察中我发现了一个有趣的事：当生活的场景或地点发生变化时，稳定的行为模式会被打断，很难恢复，即使恢复也不完整。
+
+为了对抗家族遗传性的高血脂，我一直低脂低盐饮食，过年7天假期我允许自己短暂的放纵，但是假期结束后我却忘记了低脂饮食的习惯。本来我每天坚持跑步 5km，得了新冠后，浑身乏力，无法运动。一个月后身体彻底康复，身体变得懒惰，不再愿意跑步。
+
+旅游，过年，出差，都会打断循规蹈矩的生活，每次打断我都把自己弄丢了。这个文档快速帮自己找回自己，找回那个我所喜爱的循规蹈矩的自己。
+
 
 #### 信仰习惯
 
@@ -70,27 +69,35 @@ tags:
 
 #### 健康习惯
 
-- 能早起就早起，不能早起别勉强。
-- 每天早晨喝一大杯水
-- 开会时，升起办公桌，保证每天有站立办公的时间。
-- 工作45分钟，锻炼15分钟。
-	- 俯卧撑
-	- 引体向上
-	- 卷腹
-	- 提肛20个
-	- 收下巴锻炼颈椎
-	- 臀桥
-- 打喷嚏时头后仰，保护颈椎。
-- 低脂饮食，不吃碳水化合物
-- 每天晚上慢跑 5km
-- 争取 21:30 躺在床上，准备睡觉。
-- 不喝酒，每次喝酒前列腺都不畅。
-- 不适合豆腐乳。它可能干扰了消化系统的节律，大便粘稠，不成块。
-- 不适合吃香肠。香肠会导致胃食管反流。
-- 下班后不看电子设备，多看看书，背单词。
-- 拉屎不看手机，防止痔疮
-- 左右手交替使用鼠标，每个月交替一次。奇数月份左侧，偶数月份右侧。
-- 咀嚼食物的磨牙，每个月左右交替一次。奇数月份左侧，偶数月份右侧。
+
+| 原则 | 打破原则的直接后果 (3-5年) | 打破原则的凄惨结局 (60岁)| 
+|:--|:--|:--|
+| 能早起就早起，不能早起别勉强 |  |  |
+| 每天早晨喝一大杯水 | 肾结晶加重，变为结石  |
+| 打喷嚏时头后仰，保护颈椎。 | 颈椎病发作 |
+| 中午 12:00 之后不要喝咖啡 | 睡的很浅，凌晨4点就会醒。更严重的话，彻夜失眠 | 记忆力下降，无法编程 |
+| 左右手交替使用鼠标，一月一换 | 右侧手肘疼痛 |  |
+| 左右交替使用磨牙进食，一月一换 | 单侧磨牙磨损，疼痛 |  |
+| 不喝酒 | 前列腺不舒服 / 胃食管反流 | 老年后起夜增多，睡不好，折腾死自己 |
+| 站立开会 | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
+| 工作45分钟，锻炼15分钟\* | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
+| 不吃豆腐乳 | 拉屎不痛快 |  |
+| 拉屎不看手机 | 痔疮发作 |  |
+| 不吃香肠 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心 | 脑梗/心梗，成为家庭的累赘 |
+| 每天晚上跑步 5 km | 肥胖/脂肪肝 |脑梗/心梗，成为家庭的累赘  |
+| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间 | 偏离信仰，下地狱 |
+|  |  |  |
+
+
+工作间隙锻炼方式有：
+
+- 俯卧撑
+- 引体向上
+- 卷腹
+- 提肛20个
+- 收下巴锻炼颈椎
+- 臀桥
+
 
 #### 家庭习惯
 
@@ -100,7 +107,7 @@ tags:
 - 中午独自吃饭时，和奶奶聊聊天
 - 每周给我爸妈打个电话
 - 多储蓄
-- 不需要的东西，一份钱都不要花。
+- 不需要的东西，一分钱都不要花。打折省 20%，不买省 100%。
 - 不要高估钱财的作用，它并不可靠。战争/屠杀/文革随时有可能发生，没有绝对安全。
 - 家中富足睡不安稳，不如穷乏却睡的香甜。
 
