--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -63,12 +63,11 @@ tags:
 
 #### 信仰习惯
 
-- 三选一。全家人一起早晨听圣经；晚上一起敬拜，晚上一起祷告。
+- 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。
 - 写日记
 
 
 #### 健康习惯
-
 
 | 原则 | 打破原则的直接后果 (3-5年) | 打破原则的凄惨结局 (60岁)| 
 |:--|:--|:--|
