--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 
-## 2023年需要尝试的新方向
+## 2023年尝试的新方向
 
 #### 信仰
 
@@ -18,12 +18,11 @@ tags:
 
 #### 家庭
 
-
-给别人自主权，改掉“好为人师”的臭毛病。允许别人犯错，允许糟糕的事情发声，改掉自己的强烈的控制欲。
+给别人自主权，改掉“好为人师”的臭毛病。允许别人犯错，允许糟糕的事情发声，克制自己的强烈的控制欲。
 
 继续鼓励妻子每周和 Jaimie 用英文聊天，允许她犯错，允许她绕弯路，允许她按奇怪的方式学英语。她若不需要指点，我不要好为人师。
 
-妻子开始承担教会财务的工作，做事情有点拖沓，看的我着急。我要克制，不要插嘴。
+妻子开始承担教会财务的工作。我要克制，不要插嘴。
 
 **给沐沐学习更多的自主权**，允许他犯错，低效，磨叽，绕弯路，非最优解。他若不需要帮助，我不要好为人师。他若寻求帮助，就给他提供最好的资源和支持。要沉得住气，一口气憋两年也要沉住气。
 
@@ -54,18 +53,20 @@ tags:
 
 ## 2011-2022 年沉淀下来的习惯
 
-我是个动物，有自己的行为模式，在对自己的观察中我发现了一个有趣的事：当生活的场景或地点发生变化时，稳定的行为模式会被打断，很难恢复，即使恢复也不完整。
+在对自己的观察中我发现了一个有趣的事：当生活的场景或地点发生变化时，稳定的行为模式会被打断，很难恢复，即使恢复也不完整。
 
 为了对抗家族遗传性的高血脂，我一直低脂低盐饮食，过年7天假期我允许自己短暂的放纵，但是假期结束后我却忘记了低脂饮食的习惯。本来我每天坚持跑步 5km，得了新冠后，浑身乏力，无法运动。一个月后身体彻底康复，身体变得懒惰，不再愿意跑步。
 
-旅游，过年，出差，都会打断循规蹈矩的生活，每次打断我都把自己弄丢了。这个文档快速帮自己找回自己，找回那个我所喜爱的循规蹈矩的自己。
+旅游，过年，出差，让生活充满了新意，但也打断了循规蹈矩的生活，每次打断我都把自己弄丢了。这个文档快速帮自己找回自己，找回那个我所喜爱的循规蹈矩的自己。
 
 
 #### 信仰习惯
 
-- 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。
-- 写日记
-
+| 原则 | 打破原则的直接后果 (3-5年) | 打破原则的凄惨结局 (60岁)| 
+|:--|:--|:--|
+| 常常默想死亡 "假如只剩三年寿命，该做什么" | 沉迷物质享受和虚浮的事物  | 没有反省的人生不值得活 |
+| 写日记 |  |  |
+| 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。 |  | 全家偏离信仰 |
 
 #### 健康习惯
 
