--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -82,7 +82,8 @@ tags:
 | 站立开会 | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
 | 工作45分钟，锻炼15分钟\* | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
 | 不吃豆腐乳 | 拉屎不痛快 |  |
-| 拉屎不看手机 | 痔疮发作 |  |
+| 吃饭慢嚼细咽 | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。 |  |
+| 拉屎不看手机 | 痔疮发作 / 颈椎病发作 |  |
 | 不吃香肠 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心 | 脑梗/心梗，成为家庭的累赘 |
 | 每天晚上跑步 5 km | 肥胖/脂肪肝 |脑梗/心梗，成为家庭的累赘  |
 | 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间 | 偏离信仰，下地狱 |
